# barnguard

./: .editorconfig  .gitignore  Cargo.toml  README.md  config.example.toml  flake.nix  package-lock.json
crates/printer-driver/: Cargo.toml  README.md
crates/printer-driver/src/: error.rs  lib.rs  types.rs
crates/printer-driver/src/backend/: mock.rs  mod.rs  protocol.rs  tcp.rs
crates/printer-driver/tests/: protocol_framing.rs
crates/server/: .gitignore  Cargo.toml  README.md
crates/server/src/: backend_factory.rs  cli.rs  client_config.rs  config.rs  events.rs  lib.rs  log.rs  main.rs  queue.rs  types.rs  web.rs
crates/server/src/http/: mod.rs  routes.rs  sse.rs
crates/server/src/store/: mod.rs
crates/server/tests/: queue_lifecycle.rs
scripts/: build-linux.sh  build.sh
web/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
web/src/: App.svelte  displayRegistry.ts  env.d.ts  fatalError.ts  main.ts
web/src/core/: display.ts
web/src/core/attendant/: AttendantControls.svelte  BoothMenu.svelte  CoverScreen.svelte  DisplaySettings.svelte  GamesPanel.svelte  PrinterPanel.svelte  TopBar.svelte  boothMenuToggle.ts
web/src/core/game-log/: gameLogClient.ts
web/src/core/print/: canvas.ts  printerClient.test.ts  printerClient.ts  sseStateMachine.test.ts  types.ts
web/src/core/theme/: index.ts  types.ts
web/src/core/ui/: BackgroundLayer.svelte  Button.svelte  IconButton.svelte  Overlay.svelte  Score.svelte  Surface.svelte  themeScope.ts  uiScale.ts
web/src/displays/arcade/: ArcadeScreen.svelte  ReturnToLauncherOverlay.svelte  RobotIcon.svelte  index.ts  label.ts  theme.ts  world.ts
web/src/displays/stallwaechter/: game-log.ts  (+4 more)
web/src/game/: assets.ts  index.ts  session.ts  spawnPacketInSession.ts
web/src/i18n/: de.ts  en.ts  index.ts  types.ts
web/src/lib/: AttendantControls.svelte  BackgroundLayer.svelte  BoothMenu.svelte  Button.svelte  ConfirmButton.svelte  CoverScreen.svelte  GameOverOverlay.svelte  GameScreen.svelte  GamesPanel.svelte  NumberCounter.svelte  PauseOverlay.svelte  PrinterPanel.svelte  StateConfirmCard.svelte  TopBar.svelte  boothMenuToggle.ts  gameLogClient.ts
web/src/stargazer/: README.md  index.ts  typedoc.json
web/src/stores/: appState.ts  coverScreen.ts  daemonConfig.ts  gameSelection.ts
web/src/styles/: colors.scss  fonts.scss  global.sass  scale.sass  tokens.sass  typography.scss  utils.sass
(+349 files in other folders)
