[package]
name = "printer-driver"
edition.workspace = true
version.workspace = true
description = "Rust driver for the Brother VC-500W label printer: pure protocol builders/parsers plus TCP and mock backends behind a single async trait."
publish = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
